Zoom Border vs Zoom to border #46426

Closed
opened 2015-10-09 12:01:55 +02:00 by Reiner Prokein · 7 comments

System Information
Operating system and graphics card
Windows 7 64 Bit german, Nvidia 760 GTX
Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen)
Worked: (optional)

2.76.1

Short description of error

Name inconsistency.

Menu has menu item Zoom Border. Search just displays item Zoom to Border. So when you type in Zoom Border you don't get a result.

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

Press spacebar. Search for Zoom Border. You will get zero results. Search for Zoom to Border you will get two* results.

  • is this another bug? Or is this intended? The second item seems to be disfunctional.

zoomborder.jpg

**System Information** Operating system and graphics card Windows 7 64 Bit german, Nvidia 760 GTX **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) Worked: (optional) 2.76.1 **Short description of error** Name inconsistency. Menu has menu item Zoom Border. Search just displays item Zoom to Border. So when you type in Zoom Border you don't get a result. **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps Press spacebar. Search for Zoom Border. You will get zero results. Search for Zoom to Border you will get two* results. * is this another bug? Or is this intended? The second item seems to be disfunctional. ![zoomborder.jpg](https://archive.blender.org/developer/F243634/zoomborder.jpg)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @tiles

Added subscriber: @tiles

Added subscriber: @mont29

Added subscriber: @mont29

The different naming is not a bug, 'search menu' is a lower-level access to operators, while UI is a higher level access to them, which is allowed to rename if needed.

Now, double entries in search menu are actually a (harmless) bug, the second one is the 2D version of zoom border, should not appear for 3DView, will fix.

The different naming is not a bug, 'search menu' is a lower-level access to operators, while UI is a higher level access to them, which is allowed to rename if needed. Now, double entries in search menu are actually a (harmless) bug, the second one is the 2D version of zoom border, should not appear for 3DView, will fix.
Bastien Montagne self-assigned this 2015-10-09 22:24:41 +02:00

This issue was referenced by db3dfb76a8

This issue was referenced by db3dfb76a8c51a7c65ec6da715c9df91b75b68d1

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Thanks for explanation :)

Thanks for explanation :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46426
No description provided.