Fix T46426: 2D-version of zoom border operator is available in 3DView context.